# BoxBox

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  OVERNIGHT_TASK.md  README.md  pyproject.toml  requirements.txt
.claude/skills/f1-data/: SKILL.md
.github/workflows/: ci.yml
analysis/: figures.py
config/: extraction.yaml  models.yaml  run.yaml
data/decision_points/: 2024-bahrain.json  2024-monaco.json  2025-monaco.json  2025-silverstone.json  2026-australia.json  2026-barcelona.json  2026-canada.json  2026-china.json  2026-japan.json  2026-miami.json  2026-monaco.json  manifest.json
docs/: DECISIONS.md  LIMITATIONS.md  MORNING_REPORT.md  PREREGISTRATION.md  citations_found.md  factcheck_report.md  hypothesis_tests.md  paper_data.md
docs/build-process/: OVERNIGHT_TASK.md
outputs/: contamination.md  cost_ledger.csv  fable_comparison.md  leaderboard.csv  leaderboard.md  scores.jsonl
paper/: boxbox_final_complete.md  draft.md
scripts/: build_dataset.py  contamination_report.py  hypothesis_tests.py  live_dryrun.py  openf1_auth_check.py  rerun_changed.py  run_benchmark.py  run_consistency_probe.py  run_full_benchmark.py  run_live.py  score_results.py  smoke_test.py  verify_models.py
site/: index.html  leaderboard.json
site/live/: index.html
src/boxbox/: __init__.py  config.py  dataset.py
src/boxbox/data/: ingest.py  openf1.py  schemas.py
src/boxbox/extract/: decision_points.py
tests/: conftest.py  test_end_to_end.py  test_extraction.py  test_harness.py  test_openf1_auth.py  test_parser.py  test_probe.py  test_sim.py
(+12 files in other folders)
